# rust-turing

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  ReadMe.md
examples/: turing_basic.rs
src/: lib.rs  turing.rs  turing_tables.rs
